@@ -849,12 +849,17 @@ $wgMessageStructure = array(
 		'imgdelete',
 		'imgdesc',
 		'imgfile',
-		'imglegend',
-		'imghistory',
-		'revertimg',
-		'deleteimg',
-		'deleteimgcompletely',
-		'imghistlegend',
+		'filehistory',
+		'filehist-help',
+		'filehist-deleteall',
+		'filehist-deleteone',
+		'filehist-revert',
+		'filehist-current',
+		'filehist-datetime',
+		'filehist-user',
+		'filehist-dimensions',
+		'filehist-filesize',
+		'filehist-comment',
 		'imagelinks',
 		'linkstoimage',
 		'nolinkstoimage',
